--- a/fib-pro2/test/interval.in
+++ b/fib-pro2/test/interval.in
@@ -5,5 +5,12 @@
 ? 21.04.15 22.04.15
 sortir
 
+######################################################
+#
 # Author: Twinone
-# Tests the limits of an interval query
+#
+# Tests:
+#
+# Limits of an interval query
+#
+######################################################
