--- a/fib-pro2/jutge/makefile
+++ b/fib-pro2/jutge/makefile
@@ -1,7 +1,7 @@
-CPP_FILES := $(wildcard *.cc)
-OBJ_FILES := $(patsubst %.cc,%.o,$(CPP_FILES))
+CC_FILES := $(wildcard *.cc)
+OBJ_FILES := $(patsubst %.cc,%.o,$(CC_FILES))
 LD_FLAGS := 
-CC_FLAGS := -Werror
+CC_FLAGS := -Werror -D_GLIBCXX_DEBUG
 
 %.o: %.cc
 	g++ -c $(CC_FLAGS) -o $@ $<
