--- a/fib-lp/lego/test.in
+++ b/fib-lp/lego/test.in
@@ -1,6 +1,7 @@
 Grid 20 10
-B1 = PLACE (2,2) AT (1,1)
 B2 = PLACE (4,4) AT (3,1)
 
-B2 = B1 PUSH B2
 B2 = (2,2) PUSH B2
+B2 = (2,2) PUSH B2
+B2 = (3,2) PUSH B2
+B2 = (3,2) PUSH B2
