Add binaries for antlr and dlg because university's suck

--- a/fib-lp/lego/Makefile
+++ b/fib-lp/lego/Makefile
@@ -2,8 +2,8 @@ CC := g++
 PROG := lego
 CC_FLAGS := -Wno-write-strings
 all:
-	antlr -gt $(PROG).g
-	dlg -ci parser.dlg scan.c
+	bin/antlr -gt $(PROG).g
+	bin/dlg -ci parser.dlg scan.c
 	$(CC) $(CC_FLAGS) -o $(PROG).o $(PROG).c scan.c err.c
 	@make halfclean
 
