Update makefile for university stuff

--- a/fib-lp/lego/Makefile
+++ b/fib-lp/lego/Makefile
@@ -1,10 +1,13 @@
 CC := g++
 PROG := lego
+BINPATH := /opt/pccts/bin
 CC_FLAGS := -Wno-write-strings
+ENV := CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:/home/soft/PCCTS_v1.33/include
+
 all:
-	bin/antlr -gt $(PROG).g
-	bin/dlg -ci parser.dlg scan.c
-	$(CC) $(CC_FLAGS) -o $(PROG).o $(PROG).c scan.c err.c
+	$(BINPATH)/antlr -gt $(PROG).g
+	$(BINPATH)/dlg -ci parser.dlg scan.c
+	$(ENV) $(CC) $(CC_FLAGS) -o $(PROG).o $(PROG).c scan.c err.c
 	@make halfclean
 
 
