--- a/fib-idi-android/MyFilmDatabase/app/build.gradle
+++ b/fib-idi-android/MyFilmDatabase/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 25
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.example.pr_idi.mydatabaseexample"
-        minSdkVersion 22
-        targetSdkVersion 22
+        minSdkVersion 18
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -22,11 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:25.+'
 
-    // RecyclerView
-    compile 'com.android.support:recyclerview-v7:22.2.1'
+    // RecyclerView and CardView
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:+'
 
     // Floating Action Button
-    compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:design:+'
 }
