--- a/fib-lp/p2-hs/Makefile
+++ b/fib-lp/p2-hs/Makefile
@@ -1,21 +1,27 @@
 CC := g++
-PROG := parser
+PARSER := parser
+MAIN := main
 BINPATH := 
 CC_FLAGS := -Wno-write-strings
 
+all: parser.o main
+
+
+main:
+	ghc $(MAIN).hs
+
 parser.o:
-	$(BINPATH)antlr -gt $(PROG).g
+	$(BINPATH)antlr -gt $(PARSER).g
 	$(BINPATH)dlg -ci parser.dlg scan.c
-	$(ENV) $(CC) $(CC_FLAGS) -o $(PROG).o $(PROG).c scan.c err.c
+	$(ENV) $(CC) $(CC_FLAGS) -o $(PARSER) $(PARSER).c scan.c err.c
 	@make halfclean
 
-all: parser.o
 
 
 halfclean:
-	rm -f *.c *.h *.dlg
+	rm -f *.c *.h *.dlg *.o *.hi
 
 clean: halfclean
-	rm -f $(PROG).o
+	rm -f $(MAIN) $(PARSER)
 
 .PHONY: clean
