Correctly indent Show command

--- a/fib-lp/p2-hs/test.in
+++ b/fib-lp/p2-hs/test.in
@@ -1,14 +1,13 @@
 INPUT X
-EMPTY P
-WHILE X > 0 OR X = 0 DO
-	INPUT Y
-	PUSH P Y
+INPUT Y
+IF X > 0 OR X = 0 OR NOT 0 > Y THEN
+	Z := 1
+	WHILE X > Y
+	DO
+		X := X - 1
+		Z := Z * Z
+	END
+ELSE
+	Z := 0
 END
-S := 0
-SIZE P L
-WHILE L > 0 DO
-	POP P Y
-	S := S + Y
-	L := L - 1
-END
-PRINT S
+PRINT Z
