--- a/fib-lp/p2-hs/test2.in
+++ b/fib-lp/p2-hs/test2.in
@@ -1,14 +1,17 @@
 INPUT X
 EMPTY P
-WHILE X > 0 OR X = 0 DO
-	INPUT Y
-	PUSH P Y
+WHILE X > 0 OR X = 0
+DO
+  INPUT Y
+  PUSH P Y
 END
 S := 0
 SIZE P L
-WHILE L > 0 DO
-	POP P Y
-	S := S + Y
-	L := L - 1
+WHILE L > 0
+DO
+  POP P Y
+  S := S + Y
+  L := L - 1
 END
 PRINT S
+
