mv test tests, update readme, makefile, etc

--- a/fib-lp/p2-hs/Makefile
+++ b/fib-lp/p2-hs/Makefile
@@ -1,25 +1,24 @@
 CC := g++
 PARSER := parser
 MAIN := main
-BINPATH := 
 CC_FLAGS := -Wno-write-strings
 
-all: parser.o main
+all: parser main
 
 
 main:
 	ghc $(MAIN).hs
 
-parser.o:
-	$(BINPATH)antlr -gt $(PARSER).g
-	$(BINPATH)dlg -ci parser.dlg scan.c
+parser:
+	antlr -gt $(PARSER).g
+	dlg -ci parser.dlg scan.c
 	$(ENV) $(CC) $(CC_FLAGS) -o $(PARSER) $(PARSER).c scan.c err.c
 	@make halfclean
 
 
 
 halfclean:
-	rm -f *.c *.h *.dlg *.o *.hi
+	rm -f *.c *.h *.dlg *.o *.hi programhs.txt
 
 clean: halfclean
 	rm -f $(MAIN) $(PARSER)
