--- a/fib-idi-android/MyFilmDatabase/.gitignore
+++ b/fib-idi-android/MyFilmDatabase/.gitignore
@@ -1,5 +1,10 @@
-build/
 app/build/
-*.apk
-local.properties
+*.iml
 .gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
